--- a/src/app/blog/[slug]/article.module.css
+++ b/src/app/blog/[slug]/article.module.css
@@ -226,7 +226,7 @@
 
 .ctaBox p {
   font-size: 16px;
-  opacity: 0.9;
+  color: rgba(255, 255, 255, 0.95);
   margin: 0 0 20px;
 }
 
