--- a/src/app/brand/[brandSlug]/brand.module.css
+++ b/src/app/brand/[brandSlug]/brand.module.css
@@ -414,7 +414,7 @@
 
 .ctaContent p {
   font-size: 16px;
-  opacity: 0.9;
+  color: rgba(255, 255, 255, 0.95);
 }
 
 .ctaButtonPrimary {
